# aichallenge-2025

./: docker_exec_ci.sh  docker_run_ci.sh
.github/workflows/: evaluation.yaml  sync-upstream.yaml
aichallenge/: run_evaluation_ci.bash
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/: package.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/data/: accel_map.csv
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/config/planning/: costmap_generator.param.yaml  mppi_controller.param.yaml
aichallenge/workspace/src/aichallenge_submit/booars_launch/launch/: booars.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/launch/components/: control.launch.xml  planning.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/map/csv/: traj_mincurv_1.0m.csv  traj_mincurv_1.5m.csv  traj_mincurv_2.5m.csv  traj_race_cl.csv
aichallenge/workspace/src/aichallenge_submit/path_to_trajectory/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/path_to_trajectory/src/: csv_to_trajectory.cpp
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/src/: simple_pure_pursuit.cpp
aichallenge/workspace/src/aichallenge_submit/simple_trajectory_generator/src/: simple_trajectory_generator.cpp
(+9 files in other folders)
