<?xml version="1.0"?>
<package format="3">
  <name>booars_launch</name>
  <version>0.1.0</version>
  <description>The booars_launch package</description>

  <maintainer email="harada.akiro@tier4.jp">Akiro Harada</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
